# python-obsidian-garden

./: README.md  context.yaml  pyproject.toml
src/: main.py  metadata.py  note.py  noteToHtmlConverter.py  vault.py  wikilink.py
templates/default/: aside.html
templates/default/_static/: script.js
