[tool.poetry]
name = "fake-obisidian-garden"
version = "0.1.0"
description = ""
authors = ["icehongssii12345 <icehongssii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.3"
pyyaml = "^6.0.1"
markdown-it-py = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
